<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mpk.melwin.guardianapp.ProfileActivity">
    <Button
        android:id="@+id/mapbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/map" />

    <Button
        android:id="@+id/logoutbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mapbutton"
        android:text="@string/logout" />

    <TextView
        android:id="@+id/pulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoutbutton"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:text="@string/nabps"
        android:textSize="70sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logoutbutton"
        android:text="@string/textview"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
